# gdb-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
gdb_mcp/: gdb_session.py  server.py
gdb_mcp.egg-info/: PKG-INFO
