[project]
name = "gdb-mcp"
version = "0.1.1"
description = "Model Context Protocol server for driving GDB from an LLM."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "gdb-mcp" }]
dependencies = [
  "mcp>=1.0.0",
  "toml>=0.10",
]

[project.scripts]
gdb-mcp = "gdb_mcp.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
